[package]
name    = "cli-clap"
version = "0.0.1"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "A simple CLI application using clap"
homepage    = "https://github.com/termapps/cli-clap"
repository  = "https://github.com/termapps/cli-clap"

edition      = "2021"
rust-version = "1.68.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
anstream            = "0.2.6"
clap                = { version = "4.1.8", features = ["derive", "wrap_help"] }
clap-verbosity-flag = "2.0.1"
concolor            = { version = "0.1.0", features = ["api"] }
concolor-clap       = { version = "0.1.0", features = ["api"] }
owo-colors          = "3.5.0"
thiserror           = "1.0.39"
tracing             = "0.1.37"
tracing-log         = { version = "0.1.3", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.16"

[[bin]]
name = "cli-clap"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"

[workspace.metadata.workspaces]
no_individual_tags = true
