[package]
name    = "publisher"
version = "0.1.14"

authors     = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
description = "Tool to publish & distribute CLI tools"
homepage    = "https://github.com/termapps/publisher"
repository  = "https://github.com/termapps/publisher"

edition      = "2024"
rust-version = "1.88.0"

categories = ["command-line-utilities"]
license    = "MIT"
readme     = "README.md"

[dependencies]
anstream            = "0.6.19"
clap                = { version = "4.5.41", features = ["derive", "wrap_help"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
colorchoice-clap    = "1.0.7"
eyre                = "0.6.12"
owo-colors          = "4.2.2"
proc-exit           = "2.0.2"
tracing             = "0.1.41"
tracing-log         = { version = "0.2.0", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber  = "0.3.19"

config     = { version = "0.13.3", default-features = false, features = ["toml"] }
heck       = "0.4.1"
inquire    = "0.7.5"
regex      = "1.10.5"
reqwest    = { version = "0.12.22", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls"] }
serde      = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.120"
toml       = "0.8.15"
xshell     = "0.2.7"

[[bin]]
name = "publisher"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto           = "thin"
strip         = true

[profile.release-opt-size]
inherits  = "release"
lto       = true
opt-level = "z"
panic     = "abort"

[workspace.metadata.workspaces]
no_individual_tags = true
